# wmtk-python

./: CMakeLists.txt  LICENSE  README.md  setup.py
.cache/clangd/index/: binding.cpp.A6FCFB12158EB0CC.idx  raster.cpp.13785ECD5E9F0CDE.idx  raster.hpp.BA94F8640B1CD773.idx
.github/workflows/: continuous.yml
cmake/recipes/: polyfem.cmake  polyfem_data.cmake
src/: binding.cpp
